@@ -273,20 +273,20 @@ public final class Executer {
 			// Functions
 			switch (op.charAt(0)) {
 			case 'a':
-				if (op.equals("abs")) return new Double(MathUtil.abs(Caster.toDoubleValue(value)));
-				if (op.equals("acos")) return new Double(Math.acos(Caster.toDoubleValue(value)));
-				if (op.equals("asin")) return new Double(Math.asin(Caster.toDoubleValue(value)));
-				if (op.equals("atan")) return new Double(Math.atan(Caster.toDoubleValue(value)));
+				if (op.equals("abs")) return Double.valueOf(MathUtil.abs(Caster.toDoubleValue(value)));
+				if (op.equals("acos")) return Double.valueOf(Math.acos(Caster.toDoubleValue(value)));
+				if (op.equals("asin")) return Double.valueOf(Math.asin(Caster.toDoubleValue(value)));
+				if (op.equals("atan")) return Double.valueOf(Math.atan(Caster.toDoubleValue(value)));
 				break;
 			case 'c':
-				if (op.equals("ceiling")) return new Double(Math.ceil(Caster.toDoubleValue(value)));
-				if (op.equals("cos")) return new Double(Math.cos(Caster.toDoubleValue(value)));
+				if (op.equals("ceiling")) return Double.valueOf(Math.ceil(Caster.toDoubleValue(value)));
+				if (op.equals("cos")) return Double.valueOf(Math.cos(Caster.toDoubleValue(value)));
 				break;
 			case 'e':
-				if (op.equals("exp")) return new Double(Math.exp(Caster.toDoubleValue(value)));
+				if (op.equals("exp")) return Double.valueOf(Math.exp(Caster.toDoubleValue(value)));
 				break;
 			case 'f':
-				if (op.equals("floor")) return new Double(Math.floor(Caster.toDoubleValue(value)));
+				if (op.equals("floor")) return Double.valueOf(Math.floor(Caster.toDoubleValue(value)));
 				break;
 			case 'i':
 				if (op.equals("is not null")) return Boolean.valueOf(value != null);
@@ -299,19 +299,19 @@ public final class Executer {
 			case 'l':
 				if (op.equals("lower") || op.equals("lcase")) return Caster.toString(value).toLowerCase();
 				if (op.equals("ltrim")) return StringUtil.ltrim(Caster.toString(value), null);
-				if (op.equals("length")) return new Double(Caster.toString(value).length());
+				if (op.equals("length")) return Double.valueOf(Caster.toString(value).length());
 				break;
 			case 'r':
 				if (op.equals("rtrim")) return StringUtil.rtrim(Caster.toString(value), null);
 				break;
 			case 's':
-				if (op.equals("sign")) return new Double(MathUtil.sgn(Caster.toDoubleValue(value)));
-				if (op.equals("sin")) return new Double(Math.sin(Caster.toDoubleValue(value)));
+				if (op.equals("sign")) return Double.valueOf(MathUtil.sgn(Caster.toDoubleValue(value)));
+				if (op.equals("sin")) return Double.valueOf(Math.sin(Caster.toDoubleValue(value)));
 				if (op.equals("soundex")) return StringUtil.soundex(Caster.toString(value));
-				if (op.equals("sin")) return new Double(Math.sqrt(Caster.toDoubleValue(value)));
+				if (op.equals("sin")) return Double.valueOf(Math.sqrt(Caster.toDoubleValue(value)));
 				break;
 			case 't':
-				if (op.equals("tan")) return new Double(Math.tan(Caster.toDoubleValue(value)));
+				if (op.equals("tan")) return Double.valueOf(Math.tan(Caster.toDoubleValue(value)));
 				if (op.equals("trim")) return Caster.toString(value).trim();
 				break;
 			}
@@ -339,7 +339,7 @@ public final class Executer {
 			// Functions
 			switch (op.charAt(0)) {
 			case 'a':
-				if (op.equals("atan2")) return new Double(Math.atan2(Caster.toDoubleValue(left), Caster.toDoubleValue(right)));
+				if (op.equals("atan2")) return Double.valueOf(Math.atan2(Caster.toDoubleValue(left), Caster.toDoubleValue(right)));
 				break;
 			case 'b':
 				if (op.equals("bitand")) return OpUtil.bitand(pc, Caster.toDoubleValue(left), Caster.toDoubleValue(right));
