@@ -4,17 +4,17 @@
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either 
+ * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
- * You should have received a copy of the GNU Lesser General Public 
+ *
+ * You should have received a copy of the GNU Lesser General Public
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
- * 
+ *
  **/
 package lucee.runtime.exp;
 
@@ -37,7 +37,7 @@ import lucee.runtime.type.util.KeyConstants;
  * Database Exception Object
  */
 
-public final class DatabaseException extends PageExceptionImpl {
+public class DatabaseException extends PageExceptionImpl {
 
 	private SQL sql;
 	private String sqlstate = "";
@@ -62,7 +62,7 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param message error message
 	 * @param detail detailed error message
 	 * @param sqle
@@ -92,15 +92,17 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	private void set(SQLException sqle, String detail) {
 		String sqleMessage = sqle != null ? sqle.getMessage() : "";
-		if (!StringUtil.isEmpty(sqleMessage)){
+		if (!StringUtil.isEmpty(sqleMessage)) {
 			if (detail != null) {
 				setDetail(detail + "\n" + sqleMessage);
-			} else {
+			}
+			else {
 				setDetail(detail);
 			}
-		} else {
+		}
+		else {
 			setDetail(detail);
-		}		
+		}
 	}
 
 	private void set(SQLException sqle) {
@@ -134,18 +136,18 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param message
 	 * @param sqle
 	 * @param sql
-	 * 
+	 *
 	 *            public DatabaseException(String message, SQLException sqle, SQL
 	 *            sql,DatasourceConnection dc) { this(message,null,sqle,sql,dc); }
 	 */
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param sqle
 	 * @param sql
 	 */
@@ -155,7 +157,7 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param sqle
 	 */
 
@@ -168,7 +170,7 @@ public final class DatabaseException extends PageExceptionImpl {
 		if (StringUtil.isEmpty(datasourceName)) datasourceName = Caster.toString(getAdditional().get("DataSource", ""), "");
 
 		CatchBlock sct = super.getCatchBlock(config);
-		sct.setEL("NativeErrorCode", new Double(errorcode));
+		sct.setEL("NativeErrorCode", Double.valueOf(errorcode));
 		sct.setEL("DataSource", datasourceName);
 		sct.setEL("SQLState", sqlstate);
 		sct.setEL("Sql", strSQL);
