@@ -72,13 +72,13 @@ public class RequestMonitorWrap extends MonitorWrap implements RequestMonitor {
 	 * public Query getData(ConfigWeb config,long minAge, long maxAge, int maxrows) throws IOException{
 	 * try { if(getData==null) { getData=monitor.getClass().getMethod("getData", new
 	 * Class[]{long.class,long.class,int.class}); } return (Query) getData.invoke(monitor, new
-	 * Object[]{new Long(minAge),new Long(maxAge),new Integer(maxrows)}); } catch (Exception e) { throw
+	 * Object[]{Long.valueOf(minAge),Long.valueOf(maxAge),Integer.valueOf(maxrows)}); } catch (Exception e) { throw
 	 * ExceptionUtil.toIOException(e); } }
 	 * 
 	 * public Query getDataRaw(ConfigWeb config, long minAge, long maxAge) throws IOException { try {
 	 * if(getDataRaw==null) { getDataRaw=monitor.getClass().getMethod("getDataRaw", new
 	 * Class[]{ConfigWeb.class,long.class,long.class}); } return (Query) getDataRaw.invoke(monitor, new
-	 * Object[]{config,new Long(minAge),new Long(maxAge)}); } catch (Exception e) { throw
+	 * Object[]{config,Long.valueOf(minAge),Long.valueOf(maxAge)}); } catch (Exception e) { throw
 	 * ExceptionUtil.toIOException(e); } }
 	 */
 }
