@@ -440,15 +440,15 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			schedule.setEnddate(getObject("endDate", null));
 			schedule.setEndtime(getObject("endTime", null));
 			schedule.setInterval(getString("interval", null));
-			schedule.setRequesttimeout(new Double(getDouble("requestTimeOut", -1)));
+			schedule.setRequesttimeout(Double.valueOf(getDouble("requestTimeOut", -1)));
 			schedule.setUsername(getString("username", null));
 			schedule.setPassword(getString("schedulePassword", null));
 			schedule.setProxyserver(getString("proxyServer", null));
 			schedule.setProxyuser(getString("proxyuser", null));
 			schedule.setProxypassword(getString("proxyPassword", null));
 			schedule.setResolveurl(getBoolV("resolveURL", false));
-			schedule.setPort(new Double(getDouble("port", -1)));
-			schedule.setProxyport(new Double(getDouble("proxyPort", 80)));
+			schedule.setPort(Double.valueOf(getDouble("port", -1)));
+			schedule.setProxyport(Double.valueOf(getDouble("proxyPort", 80)));
 			schedule.setUnique(getBoolV("unique", false));
 
 			String rtn = getString("returnvariable", null);
@@ -1511,9 +1511,9 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doGetLoggedDebugData() throws PageException {
-		
-		// to get logged debugging data config should be a ConfigWebPro, 
- 		// for singleMode config is always ConfigServer so config must be redefine if it was singleMode
+
+		// to get logged debugging data config should be a ConfigWebPro,
+		// for singleMode config is always ConfigServer so config must be redefine if it was singleMode
 		if (singleMode) config = (ConfigPro) pageContext.getConfig();
 
 		if (config instanceof ConfigServer) return;
@@ -2411,9 +2411,9 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			configWeb.getConfigDir();
 			configWeb.getIdentification().getId();
 			configWeb.getConfigDir();
-			qry.setAt("Id", row, new Double(pc.getId()));
+			qry.setAt("Id", row, Double.valueOf(pc.getId()));
 			qry.setAt("Start", row, new DateTimeImpl(pc.getStartTime(), false));
-			qry.setAt("Timeout", row, new Double(pc.getRequestTimeout() / 1000));
+			qry.setAt("Timeout", row, Double.valueOf(pc.getRequestTimeout() / 1000));
 
 			PageContext root = pc.getRootPageContext();
 			qry.setAt("ThreadType", row, (root != null && root != pc) ? "main" : "child");
@@ -3157,7 +3157,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doUpdateCompilerSettings() throws SecurityException, PageException {
 		admin.updateCompilerSettings(getBoolObject("admin", "UpdateCompilerSettings", "dotNotationUpperCase"),
 				getBoolObject("admin", "UpdateCompilerSettings", "suppressWSBeforeArg"), getBoolObject("admin", "UpdateCompilerSettings", "nullSupport"),
-				getBoolObject("admin", "UpdateCompilerSettings", "handleUnquotedAttrValueAsString"), getInteger("admin", "UpdateCompilerSettings", "externalizeStringGTE"));
+				getBoolObject("admin", "UpdateCompilerSettings", "handleUnquotedAttrValueAsString"), getInteger("admin", "UpdateCompilerSettings", "externalizeStringGTE"),
+				getBoolObject("admin", "UpdateCompilerSettings", "preciseMath"));
 		admin.updateTemplateCharset(getString("admin", action, "templateCharset"));
 
 		store();
@@ -3197,6 +3198,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		sct.set("handleUnquotedAttrValueAsString", config.getHandleUnQuotedAttrValueAsString() ? Boolean.TRUE : Boolean.FALSE);
 		sct.set("templateCharset", config.getTemplateCharset());
 		sct.set("externalizeStringGTE", Caster.toDouble(config.getExternalizeStringGTE()));
+		sct.set("preciseMath", config.getPreciseMath());
 
 	}
 
